Fix grid layout for book container and adjust modal overflow

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
   flex-direction: column;
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
   background-color: var(--bg-secondary);
+  overflow: hidden;
 }
 
 h1 {
@@ -174,6 +175,7 @@ main {
   align-items: center;
   justify-content: center;
   position: relative;
+  overflow: auto;
 }
 
 footer {
@@ -194,6 +196,11 @@ header i {
 
 main .btn.btn-add-book {
   margin: var(--sz-md);
+  position: fixed;
+  bottom: 60px;
+  background-color: var(--fg-secondary);
+  font-size: var(--fs-md);
+  color: var(--text-dark);
 }
 
 .card {
@@ -212,7 +219,7 @@ main .btn.btn-add-book {
 }
 
 .book-container {
-  padding: var(--sz-s);
+  padding: var(--sz-xl) var(--sz-md);
   display: none;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: var(--sz-s);
@@ -302,7 +309,8 @@ footer a {
 .open {
   width: 100%;
   height: 100%;
-  display: flex;
+  display: grid;
+  overflow-y: auto;
 }
 
 .read {
